samples/_failures_safe/1761004667_5ca939_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc5f03e5.c: In function ‘handle_event’:
./samples/SAFE/__tmp_dc5f03e5.c:179:17: error: expected expression at end of input
  179 |                 case
      |                 ^~~~
./samples/SAFE/__tmp_dc5f03e5.c:179:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dc5f03e5.c:179:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dc5f03e5.c:179:17: error: expected declaration or statement at end of input
